--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>banana speak</title>
 </head>
 <body>
-   <script src="app.js"></script> 
+    <h1>talk banana</h1>
+    
+   <script src="app.js" type="text/javascript"></script> 
 </body>
 </html>
