--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>talk banana</h1>
-    
-   <script src="app.js" type="text/javascript"></script> 
+    <textarea id="txt-input" placeholder="Write your sentence in English here and we will translate it to banana"></textarea>
+    <button id="btn-translate">Translate</button>
+    <script src="app.js" type="text/javascript"></script> 
 </body>
 </html>
