input, output and processing done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>banana speak</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>talk banana</h1>
-    <textarea id="txt-input" placeholder="Write your sentence in English here and we will translate it to banana"></textarea>
+    <textarea
+      id="txt-input"
+      placeholder="Write your sentence in English here and we will translate it to banana"
+    ></textarea>
     <button id="btn-translate">Translate</button>
-    <script src="app.js" type="text/javascript"></script> 
-</body>
+    <div>
+      Output will come here 👇
+      <textarea id="output"></textarea>
+    </div>
+    <script src="app.js" type="text/javascript"></script>
+  </body>
 </html>
