--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>talk banana</h1>
-    <textarea
-      id="txt-input"
-      placeholder="Write your sentence in English here and we will translate it to banana"
-    ></textarea>
-    <button id="btn-translate">Translate</button>
-    <div>
-      Output will come here 👇
-      <textarea id="output"></textarea>
-    </div>
+    <nav>
+      <h1>banana talk</h1>
+    </nav>
+    <main>
+      <textarea
+        id="txt-input"
+        placeholder="Write your sentence in English here and we will translate it to banana"
+      ></textarea>
+      <button id="btn-translate">Translate to banana</button>
+      <div>Output will come here 👇</div>
+      <div id="output"></div>
+    </main>
+    <footer>
+      <div>about</div>
+      <p>
+        Are you a fan of minions? Did you know that the gibberish they say is an
+        actual language. Use the translator to convert your text from English to
+        Minion speak or Banana language.
+      </p>
+    </footer>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
